--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center">
+  <h1>Wagon Hunt</h1>
+  <p>Find Best Tech Products</p>
+
+  <p>
+  <%= 2 + 2 %> new products on <%= @today %>
+  </p>
+</div>
