add model Product

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,8 +2,8 @@
 
   <h1>Le détails du produit</h1>
 
-  <h2><%= @product[:name] %></h2>
+  <h2><%= @product.name %></h2>
 
-  <h3>Catégorie : <%= @product[:category] %> </h3>
+  <h3>Catégorie : <%= @product.name %> </h3>
 
 </div>
