--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
 
   <ul>
     <% @products.each do |product| %>
-      <li> <%= product[:name] %> (<%= product[:category] %>) </li>
+      <li> <%= product.name %> (<%= product.name %>) </li>
     <% end %>
   </ul>
 
