--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
   <p>Find Best Tech Products</p>
 
   <p>
-  <%= 2 + 2 %> new products on <%= @today %>
+  A lot of new products on <%= @today %>
   </p>
+  <%= link_to "All products", products_path, class: "btn btn-success" %>
 </div>
