implement new and create action on product + seed

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,7 @@
   <h3>Catégorie : <%= @product.category %> </h3>
 
   <p>
-    <%= link_to "Revenir à la liste", products_path, class: "btn btn-success" %>
+    <%= link_to "Revenir à la liste", products_path %>
   </p>
 
 </div>
