--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,9 @@
   <h3>Catégorie : <%= @product.category %> </h3>
 
   <p>
-    <%= link_to "Revenir à la liste", products_path %>
+  <%= link_to "Edit", edit_product_path(@product), class: "btn btn-warning" %>
+    <%= link_to "Delete", product_path(@product), method: :delete, class: "btn btn-danger" %>
+    <%= link_to "Revenir à la liste", products_path, class: "btn btn-primary" %>
   </p>
 
 </div>
