--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @product do |f| %>
         <%= f.input :name, placeholder: "Kudoz", label: "Which product?"%>
         <%= f.input :url, placeholder: "http://getkudoz.com", label: "Which url?" %>
+        <%= f.input :tagline, placeholder: "Tinder for jobsearch", label: "Which tagline?" %>
         <%= f.button :submit, "Add", class: "btn btn-primary" %>
       <% end %>
