--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "background.jpg" %>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url( '<%= @product.photo?  ? cloudinary_url(@product.photo.path, width: 1280) : image_path("background.jpg") %>');">
   <div class="banner-content">
     <h1><%= @product.name %></h1>
     <p><%= @product.tagline %>
@@ -12,7 +12,6 @@
       Posted by <%= @product.user.email %>
     </p>
     <% end %>
-
     <%= link_to "GET IT", @product.url, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
