--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,10 +6,37 @@
       <% @products.each do |product| %>
 
         <div class="product">
-          <div class='product-upvote'>
-            <div class="product-arrow"></div>
-            <div class='product-count'>0</div>
-          </div>
+
+          <% if user_signed_in? %>
+
+            <% if current_user.voted_for?(product) %>
+                <%# UNVOTE %>
+                <%= link_to upvote_path(current_user.upvotes.where(product: product).first), method: :delete,  class: 'product-upvote product-upvoted' do %>
+                  <div class="product-arrow">
+                  </div>
+                  <div class='product-count'>
+                    <%= product.upvotes.size %>
+                  </div>
+                <% end %>
+            <% else %>
+                <%# VOTE %>
+                <%= link_to upvotes_path(product_id: product.id), method: :post,  class: 'product-upvote' do %>
+                  <div class="product-arrow">
+                  </div>
+                  <div class='product-count'>
+                    <%= product.upvotes.size %>
+                  </div>
+                <% end %>
+            <% end %>
+
+          <% else %>
+            <div class='product-upvote'>
+              <div class="product-arrow"></div>
+              <div class='product-count'>
+                <%= product.upvotes.size %>
+              </div>
+            </div>
+          <% end %>
 
           <% if product.photo? %>
             <%= cl_image_tag(product.photo.path, height: 117, width: 175, crop: :fill, class: "product-image hidden-xs") %>
