--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,36 +7,9 @@
 
         <div class="product">
 
-          <% if user_signed_in? %>
-
-            <% if current_user.voted_for?(product) %>
-                <%# UNVOTE %>
-                <%= link_to upvote_path(current_user.upvotes.where(product: product).first), method: :delete,  class: 'product-upvote product-upvoted' do %>
-                  <div class="product-arrow">
-                  </div>
-                  <div class='product-count'>
-                    <%= product.upvotes.size %>
-                  </div>
-                <% end %>
-            <% else %>
-                <%# VOTE %>
-                <%= link_to upvotes_path(product_id: product.id), method: :post,  class: 'product-upvote' do %>
-                  <div class="product-arrow">
-                  </div>
-                  <div class='product-count'>
-                    <%= product.upvotes.size %>
-                  </div>
-                <% end %>
-            <% end %>
-
-          <% else %>
-            <div class='product-upvote'>
-              <div class="product-arrow"></div>
-              <div class='product-count'>
-                <%= product.upvotes.size %>
-              </div>
-            </div>
-          <% end %>
+          <div class="upvote-container" id="product-<%= product.id %>">
+            <%= render 'upvotes/show', product: product %>
+          </div>
 
           <% if product.photo? %>
             <%= cl_image_tag(product.photo.path, height: 117, width: 175, crop: :fill, class: "product-image hidden-xs") %>
