--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,5 +13,12 @@
     </p>
     <% end %>
     <%= link_to "GET IT", @product.url, class: "btn btn-primary btn-lg" %>
+
+    <p>
+      <%= link_to "", @product.facebook_url, class: "fa fa-facebook-official fa-2x" %></class>
+      <%= link_to "", @product.twitter_url, class: "fa fa-twitter-square fa-2x" %>
+    </p>
+
   </div>
 </div>
+
